test_apps/c/ffi/include/liter_llm.h

typedef uint64_t LITERLLMAlefHandle;
int32_t literllm_last_error_code(void);
const char *literllm_last_error_context(void);
void literllm_free_string(char *ptr);
void literllm_free_bytes(uint8_t *ptr,
                         uintptr_t len,
                         uintptr_t cap);
LITERLLMAlefHandle literllm_default_client_chat_stream_start(LITERLLMAlefHandle client,
                                                             LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_chat_stream_next(LITERLLMAlefHandle handle);
void literllm_default_client_chat_stream_free(LITERLLMAlefHandle handle);
char *literllm_assistant_message_text(LITERLLMAlefHandle this_);
char *literllm_assistant_message_refusal_text(LITERLLMAlefHandle this_);
char *literllm_assistant_message_reasoning_text(LITERLLMAlefHandle this_);
char *literllm_assistant_message_output_images(LITERLLMAlefHandle this_);
char *literllm_assistant_message_output_audio(LITERLLMAlefHandle this_);
LITERLLMAlefHandle literllm_budget_config_default(void);
LITERLLMAlefHandle literllm_cache_config_default(void);
LITERLLMAlefHandle literllm_catalog_refresh_config_default(void);
LITERLLMAlefHandle literllm_default_client_chat(LITERLLMAlefHandle this_,
                                                LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_embed(LITERLLMAlefHandle this_,
                                                 LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_list_models(LITERLLMAlefHandle this_);
LITERLLMAlefHandle literllm_default_client_image_generate(LITERLLMAlefHandle this_,
                                                          LITERLLMAlefHandle req);
int32_t literllm_default_client_speech(LITERLLMAlefHandle this_,
                                       LITERLLMAlefHandle req,
                                       uint8_t **out_ptr,
                                       uintptr_t *out_len,
                                       uintptr_t *out_cap);
LITERLLMAlefHandle literllm_default_client_transcribe(LITERLLMAlefHandle this_,
                                                      LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_moderate(LITERLLMAlefHandle this_,
                                                    LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_rerank(LITERLLMAlefHandle this_,
                                                  LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_search(LITERLLMAlefHandle this_,
                                                  LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_ocr(LITERLLMAlefHandle this_,
                                               LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_create_file(LITERLLMAlefHandle this_,
                                                       LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_retrieve_file(LITERLLMAlefHandle this_,
                                                         const char *file_id);
LITERLLMAlefHandle literllm_default_client_delete_file(LITERLLMAlefHandle this_,
                                                       const char *file_id);
LITERLLMAlefHandle literllm_default_client_list_files(LITERLLMAlefHandle this_,
                                                      LITERLLMAlefHandle query);
int32_t literllm_default_client_file_content(LITERLLMAlefHandle this_,
                                             const char *file_id,
                                             uint8_t **out_ptr,
                                             uintptr_t *out_len,
                                             uintptr_t *out_cap);
LITERLLMAlefHandle literllm_default_client_create_batch(LITERLLMAlefHandle this_,
                                                        LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_retrieve_batch(LITERLLMAlefHandle this_,
                                                          const char *batch_id);
LITERLLMAlefHandle literllm_default_client_list_batches(LITERLLMAlefHandle this_,
                                                        LITERLLMAlefHandle query);
LITERLLMAlefHandle literllm_default_client_cancel_batch(LITERLLMAlefHandle this_,
                                                        const char *batch_id);
LITERLLMAlefHandle literllm_default_client_fetch_batch_for_polling(LITERLLMAlefHandle this_,
                                                                   const char *batch_id);
LITERLLMAlefHandle literllm_default_client_wait_for_batch(LITERLLMAlefHandle this_,
                                                          const char *batch_id,
                                                          LITERLLMAlefHandle config);
LITERLLMAlefHandle literllm_default_client_create_response(LITERLLMAlefHandle this_,
                                                           LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_retrieve_response(LITERLLMAlefHandle this_,
                                                             const char *response_id);
LITERLLMAlefHandle literllm_default_client_cancel_response(LITERLLMAlefHandle this_,
                                                           const char *response_id);
char *literllm_llm_config_providers(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_rate_limit_config_default(void);
LITERLLMAlefHandle literllm_wait_for_batch_config_default(void);
int32_t literllm_install_catalog_overlay_from_str(const char *catalog_json);
LITERLLMAlefHandle literllm_model_info(const char *model);
void literllm_record_cost_usd(const char *system,
                              const char *model,
                              const char *operation,
                              double cost_usd);
LITERLLMAlefHandle literllm_refresh_catalog(LITERLLMAlefHandle config);
int32_t literllm_register_custom_provider(LITERLLMAlefHandle config);
int32_t literllm_unregister_custom_provider(const char *name);