packages/csharp/LiterLlm/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_install_catalog_overlay_from_str")]
    internal static extern int InstallCatalogOverlayFromStr(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string catalogJson
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_model_info")]
    internal static extern ulong ModelInfo(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_record_cost_usd")]
    internal static extern void RecordCostUsd(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string system,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string model,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string operation,
        double costUsd
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_refresh_catalog")]
    internal static extern ulong RefreshCatalog(
        ulong config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_register_custom_provider")]
    internal static extern int RegisterCustomProvider(
        ulong config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_unregister_custom_provider")]
    internal static extern int UnregisterCustomProvider(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_assistant_message_text")]
    internal static extern IntPtr AssistantMessageText(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_assistant_message_refusal_text")]
    internal static extern IntPtr AssistantMessageRefusalText(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_assistant_message_reasoning_text")]
    internal static extern IntPtr AssistantMessageReasoningText(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_assistant_message_output_images")]
    internal static extern IntPtr AssistantMessageOutputImages(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_assistant_message_output_audio")]
    internal static extern IntPtr AssistantMessageOutputAudio(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_budget_config_default")]
    internal static extern ulong BudgetConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_cache_config_default")]
    internal static extern ulong CacheConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_catalog_refresh_config_default")]
    internal static extern ulong CatalogRefreshConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_chat")]
    internal static extern ulong DefaultClientChat(
        ulong handle,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_embed")]
    internal static extern ulong DefaultClientEmbed(
        ulong handle,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_list_models")]
    internal static extern ulong DefaultClientListModels(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_image_generate")]
    internal static extern ulong DefaultClientImageGenerate(
        ulong handle,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_speech")]
    internal static extern int DefaultClientSpeech(
        ulong handle,
        ulong req,
        out IntPtr outPtr,
        out UIntPtr outLen,
        out UIntPtr outCap
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_transcribe")]
    internal static extern ulong DefaultClientTranscribe(
        ulong handle,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_moderate")]
    internal static extern ulong DefaultClientModerate(
        ulong handle,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_rerank")]
    internal static extern ulong DefaultClientRerank(
        ulong handle,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_search")]
    internal static extern ulong DefaultClientSearch(
        ulong handle,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_ocr")]
    internal static extern ulong DefaultClientOcr(
        ulong handle,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_create_file")]
    internal static extern ulong DefaultClientCreateFile(
        ulong handle,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_retrieve_file")]
    internal static extern ulong DefaultClientRetrieveFile(
        ulong handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string fileId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_delete_file")]
    internal static extern ulong DefaultClientDeleteFile(
        ulong handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string fileId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_list_files")]
    internal static extern ulong DefaultClientListFiles(
        ulong handle,
        ulong query
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_file_content")]
    internal static extern int DefaultClientFileContent(
        ulong handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string fileId,
        out IntPtr outPtr,
        out UIntPtr outLen,
        out UIntPtr outCap
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_create_batch")]
    internal static extern ulong DefaultClientCreateBatch(
        ulong handle,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_retrieve_batch")]
    internal static extern ulong DefaultClientRetrieveBatch(
        ulong handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string batchId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_list_batches")]
    internal static extern ulong DefaultClientListBatches(
        ulong handle,
        ulong query
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_cancel_batch")]
    internal static extern ulong DefaultClientCancelBatch(
        ulong handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string batchId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_fetch_batch_for_polling")]
    internal static extern ulong DefaultClientFetchBatchForPolling(
        ulong handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string batchId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_wait_for_batch")]
    internal static extern ulong DefaultClientWaitForBatch(
        ulong handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string batchId,
        ulong config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_create_response")]
    internal static extern ulong DefaultClientCreateResponse(
        ulong handle,
        ulong req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_retrieve_response")]
    internal static extern ulong DefaultClientRetrieveResponse(
        ulong handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string responseId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_cancel_response")]
    internal static extern ulong DefaultClientCancelResponse(
        ulong handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string responseId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_llm_config_providers")]
    internal static extern IntPtr LlmConfigProviders(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rate_limit_config_default")]
    internal static extern ulong RateLimitConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_wait_for_batch_config_default")]
    internal static extern ulong WaitForBatchConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_chat_stream_start")]
    internal static extern ulong DefaultClientChatStreamStart(ulong client, ulong req);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_chat_stream_next")]
    internal static extern ulong DefaultClientChatStreamNext(ulong handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_chat_stream_free")]
    internal static extern void DefaultClientChatStreamFree(ulong handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_free_string")]
    internal static extern void FreeString(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_free_bytes")]
    internal static extern void FreeBytes(IntPtr ptr, UIntPtr len, UIntPtr cap);
}
